--- a/WebContent/styles/common_stylesheet.css
+++ b/WebContent/styles/common_stylesheet.css
@@ -1,35 +1,29 @@
 html, body, form {
-	margin: 0px;
-	padding: 0px;
+	margin-left: 15px;
+	margin-top: 5px;
+	margin-bottom: 5px
+	padding: 5px;
 	font-family: Trebuchet MS; 
-	font-size: 13px;
-	color: #2f4f4f;
+	font-size: small;
+	/*font-size: 18px;
+	 color: #2f4f4f; */
 }
 
-select{
-	
-	font : normal normal 12px/18px "Trebuchet MS";
-}
-
-input {
-	font : normal normal 12px/18px "Trebuchet MS";
-}
 
 th{
 	font : Trebuchet MS; 
-	font-size: medium;
-	color:white;
+	font-size: small;
+	/* color:white; */
 	font-weight: bold;
-	background-color: #ffC30B;	
+	 background-color: #f2f2f2;	 
 }
-
-td{
-	font : normal normal 12px/18px "Trebuchet MS";
+table {
+    border-collapse: collapse;
 }
 
 .zebra>tr:nth-child(even) 
 {
-	background:#FFFF99
+	background:#f2f2f2
 	/*background: #fcf75e*/	
 }
 
@@ -60,73 +54,4 @@ odd
     font-weight:bold;
 }
 
-/* Navbar container 
-.navbar {
-  overflow: hidden;
-  background-color: #ffC30B;
-  font-family: Arial;
-}
-
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-
-.dropdown .dropbtn {
-  font-size: 16px; 
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit; 
-  margin: 0;  
-}
-
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-*/
+.required:after { content:" *"; color: red}
